8. commit => hesap aktifleştirme işlemleri yapıldı

--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -4,3 +4,5 @@ hoaxify.error.validation = Dogrulama hatasi
 hoaxify.create.user.email.failure = Hesap aktiflestirme e-postasini gonderemedik, lutfen tekrar deneyin
 hoaxify.mail.user.created.title = Hesabinizi aktiflestirin
 hoaxify.mail.click.here = Buraya tiklayin
+hoaxify.activate.user.invalid.token=Hesap aktiflestirme degeri gecersiz
+hoaxify.activate.user.success.message=Hesabiniz aktiflestirme basarili bir sekilde sonuclanmistir
