11. commit => kullanıcı bilgilerini getirme eklendi,değişkenlerde hata içeren mesajlar mesajlar ekleni

--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -6,3 +6,4 @@ hoaxify.mail.user.created.title = Hesabinizi aktiflestirin
 hoaxify.mail.click.here = Buraya tiklayin
 hoaxify.activate.user.invalid.token=Hesap aktiflestirme degeri gecersiz
 hoaxify.activate.user.success.message=Hesabiniz aktiflestirme basarili bir sekilde sonuclanmistir
+hoaxify.user.not.found={0} numarali kullanici bulunamadi
