12. commit => girişte kişilerin doğrulaması yapılıyor ,handlerlar hepsi bir sayfaya toplandı ve tekrar eden kodlar çıkarılıp kısaltıldı,yeni hata mesajları eklendi

--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -7,3 +7,4 @@ hoaxify.mail.click.here = Buraya tiklayin
 hoaxify.activate.user.invalid.token=Hesap aktiflestirme degeri gecersiz
 hoaxify.activate.user.success.message=Hesabiniz aktiflestirme basarili bir sekilde sonuclanmistir
 hoaxify.user.not.found={0} numarali kullanici bulunamadi
+hoaxify.auth.invalid.credentials=Hatali bilgiler girdiniz
